--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
+
+    <!-- hero -->
     <section class="hero">
         <div class="hero__content container">
             <div class="hero__content__logo">
@@ -18,10 +20,47 @@
             </div>
         </div>
     </section>
+
+    <!-- about  -->
     <section class="about">
-        <div class="about_content container">
-            <img src="./dist/images/cuphead-gif.gif" alt="" >
+        <div class="about__content container">
+            <img class="about__content__image"" src="./dist/images/ch-gif.gif" alt="" >
+            <div class="about__content__text">
+                <h2 class="title">Sobre</h2>
+                <p class="text">Cuphead é um jogo frenético e divertido, com visual retrô dos anos 1930 e batalhas contra chefes desafiadores. Junte-se a Cuphead e Mugman nessa aventura animada para pagar uma dívida com o Diabo, cheia de ação, risadas e muita nostalgia!</p>
+            </div>
         </div>
     </section>
+    
+    <!-- Separador -->
+    <div class="separator">
+        <div class="separator__border"></div>
+        <img class="separator__image" src="./dist/images/logo.png" alt="">
+        <div class="separator__border"></div>
+    </div>
+
+    <!-- boss  -->
+     <section class="boss">
+        <h2 class="title">Chefes</h2>
+        <ul class="boss__content .container">
+            <li class="boss__content__item">
+                <img src="./dist/images/Devil.png" alt="">
+                <h3 class="title--small">The Devil</h3>
+            </li>
+            <li class="boss__content__item">
+                <img src="./dist/images/king-dice.png" alt="">
+                <h3 class="title--small">King Dice</h3>
+            </li>
+            <li class="boss__content__item">
+                <img src="./dist/images/cagney.png" alt="">
+                <h3 class="title--small">Cagney</h3>
+            </li>
+            <li class="boss__content__item">
+                <img src="./dist/images/pirouletta.png" alt="">
+                <h3 class="title--small">Pirouletta</h3>
+            </li>
+        </ul>
+        <a class="button" href="#">Outros</a>
+     </section>
 </body>
 </html>
