--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <img class="about__content__image"" src="./dist/images/ch-gif.gif" alt="" >
             <div class="about__content__text">
                 <h2 class="title">Sobre</h2>
-                <p class="text">Cuphead é um jogo frenético e divertido, com visual retrô dos anos 1930 e batalhas contra chefes desafiadores. Junte-se a Cuphead e Mugman nessa aventura animada para pagar uma dívida com o Diabo, cheia de ação, risadas e muita nostalgia!</p>
+                <p class="text">
+                    Cuphead é um jogo frenético e divertido, com visual retrô dos anos 1930 e batalhas contra chefes desafiadores. Junte-se a Cuphead e Mugman nessa aventura animada para pagar uma dívida com o Diabo, cheia de ação, risadas e muita nostalgia!
+                </p>
             </div>
         </div>
     </section>
@@ -61,6 +63,24 @@
             </li>
         </ul>
         <a class="button" href="#">Outros</a>
+     </section>
+     
+     <!-- expansion -->
+     <section class="expansion">
+        <div class="expansion__content container">
+            <div class="expansion__content__text">
+                <h2 class="title">Nova DLC</h2>
+                <p class="text">
+                    Cuphead: <strong>The Delicious Last Course leva</strong> a aventura a um nível totalmente novo! Nesta nova DLC, Cuphead e Mugman se unem a Ms. Chalice em uma jornada por uma ilha inédita cheia de chefes desafiadores e habilidades nunca antes vistas.
+                </p>
+                <p class="text">
+                    Prepare-se para gráficos retrô ainda mais vibrantes e trilhas sonoras incríveis enquanto você enfrenta inimigos em batalhas épicas e recheadas de ação! Uma experiência imperdível para quem adora o estilo clássico e emocionante de Cuphead.
+                </p>
+                <a class="button" href="">Leia mais</a>
+            </div>
+            <img class="expansion__content__image"" src="./dist/images/cuphead-exp.png" alt="" >
+        </div>
+        </div>
      </section>
 </body>
 </html>
