--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
         </div>
     </section>
 
+    <!-- available -->
+    <section class="available">
+        <div class="available__content container">
+            <h4 class="title--small">Disponível em:</h4>
+            <div class="available__content__image">
+                <img src="dist/images/xbox.png" alt="Xbox">
+                <img src="dist/images/switch.png" alt="Nitendo Switch">
+                <img src="dist/images/ps4.png" alt="Ps4">
+                <img src="dist/images/windows.png" alt="Windows">
+                <img src="dist/images/steam.png" alt="Steam">
+                <img src="dist/images/gog.png" alt="Gog">
+                <img src="dist/images/apple.png" alt="Apple">
+            </div>
+        </div>
+    </section>
+
     <!-- about  -->
     <section class="about">
         <div class="about__content container">
@@ -42,7 +58,7 @@
     </div>
 
     <!-- boss  -->
-     <section class="boss">
+    <section class="boss">
         <h2 class="title">Chefes</h2>
         <ul class="boss__content .container">
             <li class="boss__content__item">
@@ -63,10 +79,10 @@
             </li>
         </ul>
         <a class="button" href="#">Outros</a>
-     </section>
-     
-     <!-- expansion -->
-     <section class="expansion">
+    </section>
+    
+    <!-- expansion -->
+    <section class="expansion">
         <div class="expansion__content container">
             <div class="expansion__content__text">
                 <h2 class="title">Nova DLC</h2>
@@ -81,6 +97,16 @@
             <img class="expansion__content__image"" src="./dist/images/cuphead-exp.png" alt="" >
         </div>
         </div>
-     </section>
+    </section>
+
+    <!-- music -->
+    <section class="music">
+        <div class="music__content container">
+            <h2>CUPHEAD SHEET MUSIC</h2>
+            <p>AVAILABLE NOW</p>
+            <img src="" alt="">
+            <a href="https://cupheadnotes.com/">cupheadnotes.com</a>
+        </div>
+    </section>
 </body>
 </html>
