adicionando music e footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- available -->
     <section class="available">
         <div class="available__content container">
-            <h4 class="title--small">Disponível em:</h4>
+            <h4 class="text--font-title">Disponível em:</h4>
             <div class="available__content__image">
                 <img src="dist/images/xbox.png" alt="Xbox">
                 <img src="dist/images/switch.png" alt="Nitendo Switch">
@@ -53,7 +53,7 @@
     <!-- Separador -->
     <div class="separator">
         <div class="separator__border"></div>
-        <img class="separator__image" src="./dist/images/logo.png" alt="">
+        <img class="separator__image" src="./dist/images/logo.png" alt="Cuphead">
         <div class="separator__border"></div>
     </div>
 
@@ -62,19 +62,19 @@
         <h2 class="title">Chefes</h2>
         <ul class="boss__content .container">
             <li class="boss__content__item">
-                <img src="./dist/images/Devil.png" alt="">
+                <img src="./dist/images/Devil.png" alt="The Devil">
                 <h3 class="title--small">The Devil</h3>
             </li>
             <li class="boss__content__item">
-                <img src="./dist/images/king-dice.png" alt="">
+                <img src="./dist/images/king-dice.png" alt="King Dice">
                 <h3 class="title--small">King Dice</h3>
             </li>
             <li class="boss__content__item">
-                <img src="./dist/images/cagney.png" alt="">
+                <img src="./dist/images/cagney.png" alt="Cagney">
                 <h3 class="title--small">Cagney</h3>
             </li>
             <li class="boss__content__item">
-                <img src="./dist/images/pirouletta.png" alt="">
+                <img src="./dist/images/pirouletta.png" alt="Pirouletta">
                 <h3 class="title--small">Pirouletta</h3>
             </li>
         </ul>
@@ -102,11 +102,21 @@
     <!-- music -->
     <section class="music">
         <div class="music__content container">
-            <h2>CUPHEAD SHEET MUSIC</h2>
-            <p>AVAILABLE NOW</p>
-            <img src="" alt="">
-            <a href="https://cupheadnotes.com/">cupheadnotes.com</a>
+            <h2 class="title">CUPHEAD SHEET MUSIC</h2>
+            <p class="text--font-title">AVAILABLE NOW</p>
+            <img src="./dist/images/marching-band.png" alt="Cuphead band">
+            <a class="title" href="https://cupheadnotes.com/">cupheadnotes.com</a>
         </div>
     </section>
+
+    <!-- footer -->
+     <footer class="footer">
+        <div class="footer__content container">
+            <p class="text">
+                © 2024 Site criado por <a href="">Mario Netto</a>
+            </p>
+        </div>
+
+     </footer>
 </body>
 </html>
