--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- header -->
      <section class="header">
-        <div class="header__content container">
+        <nav class="header__content container">
             <h1>
                 <img class="header__logo" src="./dist/images/logo.png" alt="Cuphead">
             </h1>
@@ -27,8 +27,35 @@
                     <a class="text--font-title button" href="#">Comprar</a>
                 </li>
             </ul>
+        </nav>
+
+    <!-- menu toggle         -->
+    <nav class="header__mobile">
+        <h1>
+            <img class="header__logo" src="./dist/images/logo.png" alt="Cuphead">
+        </h1>
+        <ul class="header__mobile__links">
+            <li class="header__mobile__links__item">
+                <a class="text--font-title" href="#about-target">Sobre</a>
+            </li>
+            <li class="header__mobile__links__item">
+                <a class="text--font-title" href="#expansion-target">DLC</a>
+            </li>
+            <li class="header__mobile__links__item">
+                <a class="text--font-title" href="#music-target">Música</a>
+            </li>
+            <li class="header__mobile__links__item">
+                <a class="text--font-title button" href="#">Comprar</a>
+            </li>
+        </ul>
+        <div class="header__mobile__toggle" data-menu-toggle>
+            <span class="header__mobile__toggle__bar"></span>
+            <span class="header__mobile__toggle__bar"></span>
+            <span class="header__mobile__toggle__bar"></span>
         </div>
-     </section>
+    </nav>
+
+    </section>
 
     <!-- hero -->
     <section class="hero">
